test/earlyReturnQuantumIf2.slq

def foo(const x:ğ”¹){
	if x{
		return ([1],[]);
	}else{
		return ([],[0]); /// error
	}
}
def main(){
	x:=H(0);
	return (foo(x),x);
}
